test/fail/let-else-not-none.mo
let x = 4 else { 5 }
